--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/BodnarAlex/educate-node#readme",
   "dependencies": {
     "@types/node": "^22.13.10",
+    "body-parser": "^1.20.3",
     "currency-converter-lt": "^2.0.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2"
